# LAD

./: .gitignore  Assembler_intrepretator.h  CMakeLists.txt  CommandIO.cpp  CommandIO.h  Commands.cpp  Commands.h  Helpers.cpp  Helpers.h  Interpretator.cpp  Interpretator.h  LAD_AP v.2.0.0.cpp  LAD_AP v.2.0.0.sln  LAD_AP v.2.0.0.vcxproj  LAD_AP v.2.0.0.vcxproj.filters  README.md  Reciever.cpp  Reciever.h  instruction.h  main.cpp  token_converter.h  tokenizator.h
LAD_AP v.2.0.0/x64/Debug/: LAD_AP v.2.0.0.exe.recipe  LAD_AP v.2.0.0.ilk  vc143.idb
LAD_AP v.2.0.0/x64/Debug/LAD_AP v.2.0.0.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  LAD_AP v.2.0.0.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
tests/: test_token_converter.cpp
